--- a/customer.html
+++ b/customer.html
@@ -23,5 +23,192 @@
             <li><button type="button">Sign Up</button></li>
         </ul>
     </header>
+    <main>
+
+        <!--Початок секції Our Clients-->
+
+        <section>
+            <h1>Our Clients</h1>
+            <ul>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+            </ul>
+        </section>
+
+        <!--Кінець секції Our clients-->
+
+        <!--Початок секції Why choose product-->
+
+        <section>
+            <h2>Why Choose Product?</h2>
+            <ul>
+                <li>
+                    <img src="" alt="">
+                    <h3>Special Business</h3>
+                    <p>
+                        Product helps you see how many
+                        more days you need to work
+                        to reach your financial goal
+                        for the month and year.
+                    </p>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <h3>Instant Result</h3>
+                    <p>
+                        Product helps you see how many
+                        more days you need to work
+                        to reach your financial goal
+                        for the month and year.
+                    </p>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <h3>Fastest way to organize</h3>
+                    <p>
+                        Product helps you see how many
+                        more days you need to work
+                        to reach your financial goal
+                        for the month and year.
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <!--Кінець секції Why choose product-->
+
+        <!--Початок секції How product work-->
+
+        <section>
+            <h2>How Product Work?</h2>
+            <ul>
+                <li>
+                    <img src="./images/mac1.png" alt="macbook1" width="500">
+                    <p>STEP 1</p>
+                    <h3>Apply for a product</h3>
+                    <p>
+                        Completing our easy step-by-step application form gives you access to multiple business with multiple products. We
+                        analyse your business through our proprietary credit analysis technology
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/mac2.png" alt="macbook2" width="500">
+                    <p>STEP 2</p>
+                    <h3>Pay fully refundable</h3>
+                    <p>
+                        Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available,
+                        your fee will be fully refunded.
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/mac3.png" alt="macbook3" width="500">
+                    <p>STEP 3</p>
+                    <h3>Completion</h3>
+                    <p>
+                        Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement
+                    </p>
+                    <button type="button">Get in touch with us</button>
+                </li>
+            </ul>
+        </section>
+
+        <!--Кінець секції How product work-->
+
+        <!--Початок секції Join thousand of other who have already received offers-->
+
+        <section>
+            <h3>
+                Join thousand of other who have
+                already received offers
+            </h3>
+            <ul>
+                <li>
+                    <img src="./images/Image Placeholder.png" alt="image Placeholder" width="150">
+                    <h4>Business</h4>
+                    <ul>
+                        <li>
+                            <p>Cash Flow</p>
+                        </li>
+                        <li>
+                            <p>Asset Backed</p>
+                        </li>
+                        <li>
+                            <p>Receivables Finance</p>
+                        </li>
+                        <li>
+                            <p>Find the best business product</p>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/Image Placeholder1.png" alt="image Placeholder1" width="150">
+                    <h4>Enterprise</h4>
+                    <ul>
+                        <li>
+                            <p>Site Acquisition</p>
+                        </li>
+                        <li>
+                            <p>Bridge</p>
+                        </li>
+                        <li>
+                            <p>Development Financing</p>
+                        </li>
+                        <li>
+                            <p>Find the best business product</p>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <!--Кінець секції Join thousand of other who have already received offers-->
+
+        <!--Початок секції promo-->
+
+        <section>
+            <h3 hidden>Promo</h3>
+            <p>Join 100 Compannies who boost their business with Product</p>
+            <button type="button">Get This</button>
+            <img src="./images/promo-image.png" alt="promo-image" width="361" height="341" />
+        </section>
+
+        <!--Кінець секції promo-->
+
+    </main>
+    <footer>
+        <a href="./index.html" class="link"><img src="./images/logo.png" alt="logo-picture" width="40" height="36" />Product</a>
+        <p>Resource</p>
+        <ul>
+            <li>
+                <p>About Us</p>
+            </li>
+            <li>
+                <p>Blog</p>
+            </li>
+            <li>
+                <p>Contact</p>
+            </li>
+            <li>
+                <p>FAQ</p>
+            </li>
+        </ul>
+        <p>Legal Stuff</p>
+        <ul>
+            <li>
+                <p>Disclaimer</p>
+            </li>
+            <li>
+                <p>Financing</p>
+            </li>
+            <li>
+                <p>Privacy Policy</p>
+            </li>
+        </ul>
+        <p>knowing you're always on the best energy deal.</p>
+        <button type="button">Sign up Now</button>
+        <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
 </body>
 </html>
