--- a/index.html
+++ b/index.html
@@ -4,49 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business promotion</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&family=Montserrat:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wdth,wght@75..100,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="link">
-          <img
-            src="./images/logo.png"
-            alt="company logo"
-            width="40"
-            height="36"
-          />Product
-        </a>
-        <ul>
-          <li><a href="./index.html" class="link">Product</a></li>
-          <li><a href="./pricing.html" class="link">Pricing</a></li>
-          <li><a href="./customer.html" class="link">Customers</a></li>
-          <li><a href="" class="link">Resources</a></li>
+    <header class="product-header">
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a href="./index.html" class="link header-logo">
+            <img
+              class="header-logo-image"
+              src="./images/logo.png"
+              alt="company logo"
+              width="40"
+              height="36"
+            /><span class="header-logo-text">Product</span>
+          </a>
+          <ul class="header-nav-list">
+            <li class="header-nav-list-item">
+              <a href="./index.html" class="link list-button"
+                ><span class="list-item-product">Product</span></a
+              >
+            </li>
+            <li class="header-nav-list-item">
+              <a href="./pricing.html" class="link list-button">Pricing</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a href="./customer.html" class="link list-button">Customers</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a href="./index.html" class="link list-button">Resources</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="sign-buttons">
+          <li class="sign-buttons-items">
+            <button class="sign-in-button" type="button">Sign In</button>
+          </li>
+          <li class="sign-buttons-item">
+            <button class="sign-up-button" type="button">Sign Up</button>
+          </li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--Секція hero-->
 
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience.
-        </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
-        </ul>
-        <img
-          src="./images/hero-img.png"
-          alt="hero-img"
-          width="610"
-          height="555"
-        />
+      <section class="hero-section">
+        <div class="container">
+          <h1 class="hero-title">Work at the speed of thought</h1>
+          <p class="hero-text">
+            Tools, tutorials, design and innovation experts, all in one place!
+            The most intuitive way to imagine your next user experience.
+          </p>
+          <ul class="hero-list">
+            <li class="hero-list-item">
+              <button class="start-button" type="button">Get started</button>
+            </li>
+            <li class="hero-list-item">
+              <button class="video-button" type="button">
+                Watch the Video
+              </button>
+            </li>
+          </ul>
+            <img
+              src="./images/hero-img.png"
+              alt="hero-img"
+              width="610"
+              height="555"
+            />
+        </div>
       </section>
 
       <!--Кінець секції hero-->
