--- a/index.html
+++ b/index.html
@@ -66,28 +66,33 @@
       <!--Секція hero-->
 
       <section class="hero-section">
-        <div class="container">
-          <h1 class="hero-title">Work at the speed of thought</h1>
-          <p class="hero-text">
-            Tools, tutorials, design and innovation experts, all in one place!
-            The most intuitive way to imagine your next user experience.
-          </p>
-          <ul class="hero-list">
-            <li class="hero-list-item">
-              <button class="start-button" type="button">Get started</button>
-            </li>
-            <li class="hero-list-item">
-              <button class="video-button" type="button">
-                Watch the Video
-              </button>
-            </li>
-          </ul>
+        <div class="container hero-container">
+          <div class="hero-text-part">
+            <h1 class="hero-title">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in one place!
+              The most intuitive way to imagine your next user experience.
+            </p>
+            <ul class="hero-list">
+              <li class="hero-list-item">
+                <button class="start-button" type="button">Get started</button>
+              </li>
+              <li class="hero-list-item">
+                <button class="video-button" type="button">
+                  Watch the Video
+                </button>
+              </li>
+            </ul>
+          </div>
+          <div class="hero-image-part">
             <img
+              class="hero-image"
               src="./images/hero-img.png"
               alt="hero-img"
               width="610"
               height="555"
             />
+          </div>
         </div>
       </section>
 
@@ -96,26 +101,36 @@
       <!--Початок секції product-->
 
       <section>
-        <h2>Product was Built Specifically for You</h2>
-        <ul>
-          <li>
-            <h3>First click tests</h3>
-            <p>While most people enjoy casino gambling</p>
-          </li>
-          <li>
-            <h3>Design surveys</h3>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
-          </li>
-          <li>
-            <h3>Preference tests</h3>
-            <p>The Myspace page defines the individual.</p>
-          </li>
-          <li>
-            <h3>Five second tests</h3>
-            <p>Personal choices and the overall personality of the person.</p>
-          </li>
-        </ul>
-        <button type="button">SIGN UP NOW</button>
+        <div class="container product-container">
+          <h2 class="product-title">Product was Built Specifically for You</h2>
+          <ul class="product-list">
+            <li class="product-list-item">
+              <h3 class="product-list-subtitle">First click tests</h3>
+              <p class="product-list-text">
+                While most people enjoy casino gambling
+              </p>
+            </li>
+            <li class="product-list-item">
+              <h3 class="product-list-subtitle">Design surveys</h3>
+              <p class="product-list-text">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="product-list-item">
+              <h3 class="product-list-subtitle">Preference tests</h3>
+              <p class="product-list-text">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="product-list-item">
+              <h3 class="product-list-subtitle">Five second tests</h3>
+              <p class="product-list-text">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button class="product-button" type="button">SIGN UP NOW</button>
+        </div>
       </section>
 
       <!--Кінець секції product-->
@@ -123,28 +138,35 @@
       <!--Початок секції management-->
 
       <section>
-        <p>Effortless Validation for</p>
-        <h2>Management</h2>
-        <p>
-          The Myspace page defines the individual, his or her characteristics,
-          traits, personal choices and the overall personality of the person.
-        </p>
-        <h3>Accessory makers</h3>
-        <p>
-          While most people enjoy casino gambling, sports betting, lottery and
-          bingo playing for the fun
-        </p>
-        <h3>Alterationists</h3>
-        <p>
-          If you are looking for a new way to promote your business that wont
-          cost you more money
-        </p>
-        <img
-          src="./images/management-img.png"
-          alt="management-image"
-          width="540"
-          height="500"
-        />
+        <div class="container management-container">
+          <div class="management-section-text">
+            <p class="management-subtitle">Effortless Validation for</p>
+            <h2 class="management-title">Management</h2>
+            <p class="management-first-text">
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
+            </p>
+            <h3 class="management-features">Accessory makers</h3>
+            <p class="management-second-text">
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+            <h3 class="management-features">Alterationists</h3>
+            <p class="management-second-text">
+              If you are looking for a new way to promote your business that
+              wont cost you more money
+            </p>
+          </div>
+          <div class="management-section-image">
+            <img
+              src="./images/management-img.png"
+              alt="management-image"
+              width="540"
+              height="500"
+            />
+          </div>
+        </div>
       </section>
 
       <!--Кінець секції management-->
@@ -152,32 +174,43 @@
       <!--Початок секції customer support-->
 
       <section>
-        <img
-          src="./images/support-img.png"
-          alt="support-image"
-          width="540"
-          height="500"
-        />
-        <p>Easier decision making for</p>
-        <h2>Customer Support</h2>
-        <p>
-          The Myspace page defines the individual, his or her characteristics,
-          traits, personal choices and the overall personality of the person.
-        </p>
-        <ul>
-          <li>
-            <p>Never worry about overpaying for your energy again.</p>
-          </li>
-          <li>
-            <p>
-              We will only switch you to energy companies that we trust and will
-              treat you right
+        <div class="container customer-support-container">
+          <div class="customer-section-image">
+            <img
+              src="./images/support-img.png"
+              alt="support-image"
+              width="540"
+              height="500"
+            />
+          </div>
+          <div class="customer-section-text">
+            <p class="customer-support-subtitle">Easier decision making for</p>
+            <h2 class="customer-support-title">Customer Support</h2>
+            <p class="customer-support-description">
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
             </p>
-          </li>
-          <li>
-            <p>We track the markets daily and know where the savings are.</p>
-          </li>
-        </ul>
+            <ul class="customer-support-list">
+              <li class="customer-support-list-item">
+                <p class="customer-support-features">
+                  Never worry about overpaying for your energy again.
+                </p>
+              </li>
+              <li class="customer-support-list-item">
+                <p class="customer-support-features">
+                  We will only switch you to energy companies that we trust and
+                  will treat you right
+                </p>
+              </li>
+              <li class="customer-support-list-item">
+                <p class="customer-support-features">
+                  We track the markets daily and know where the savings are.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <!--Кінець секції customer support-->
@@ -185,35 +218,45 @@
       <!--Початок секції collaborative-->
 
       <section>
-        <p>Optimisation for</p>
-        <h2>Collaborative</h2>
-        <p>
-          Few would argue that, despite the advancements of feminism over the
-          past three decades, women still face a double standard when it comes
-          to their behavior.
-        </p>
-        <ul>
-          <li>
-            <h3>Accessory makers</h3>
-            <p>
-              While most people enjoy casino gambling, sports betting, lottery
-              and bingo playing for the fun
+        <div class="container collaborative-container">
+          <div class="collaborative-section-text">
+            <p class="collaborative-section-subtitle">Optimisation for</p>
+            <h2 class="collaborative-section-title">Collaborative</h2>
+            <p class="collaborative-section-description">
+              Few would argue that, despite the advancements of feminism over
+              the past three decades, women still face a double standard when it
+              comes to their behavior.
             </p>
-          </li>
-          <li>
-            <h3>Alterationists</h3>
-            <p>
-              If you are looking for a new way to promote your business that
-              wont cost you more money,
-            </p>
-          </li>
-        </ul>
-        <img
-          src="./images/collaboration-img.png"
-          alt="collaboration-image"
-          width="540"
-          height="500"
-        />
+            <ul class="collaborative-section-list">
+              <li class="collaborative-section-list-items">
+                <h3 class="collaborative-section-list-subtitles">
+                  Accessory makers
+                </h3>
+                <p class="collaborative-section-list-text">
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li class="collaborative-section-list-items">
+                <h3 class="collaborative-section-list-subtitles">
+                  Alterationists
+                </h3>
+                <p class="collaborative-section-list-text">
+                  If you are looking for a new way to promote your business that
+                  wont cost you more money,
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="collaborative-section-image">
+            <img
+              src="./images/collaboration-img.png"
+              alt="collaboration-image"
+              width="540"
+              height="500"
+            />
+          </div>
+        </div>
       </section>
 
       <!--Кінець секції collaborative-->
@@ -221,50 +264,78 @@
       <!--Початок секції quick&easy process-->
 
       <section>
-        <h2>Quick & Easy Process</h2>
-        <p>
-          Do you require some help for your project: Conception workshop,
-          prototyping, marketing strategy, landing page, Ux/UI?
-        </p>
-        <ul>
-          <li>
-            <p>I can take care of your pitch</p>
-            <img
-              src="./images/avatar-1.png"
-              alt="avatar1"
-              width="98"
-              height="98"
-            />
-          </li>
-          <li>
-            <p>I can take care of your pitch</p>
-            <img
-              src="./images/avatar-2.png"
-              alt="avatar-2"
-              width="98"
-              height="98"
-            />
-          </li>
-          <li>
-            <p>I can help marketing strategy</p>
-            <img
-              src="./images/avatar-3.png"
-              alt="avatar-3"
-              width="98"
-              height="98"
-            />
-          </li>
-          <li>
-            <p>I can prototype your app</p>
-            <img
-              src="./images/avatar-4.png"
-              alt="avatar-4"
-              width="98"
-              height="98"
-            />
-          </li>
-        </ul>
-        <button type="button">Contact our expert</button>
+        <div class="container process-section-container">
+          <h2 class="process-section-title">Quick & Easy Process</h2>
+          <p class="process-section-description">
+            Do you require some help for your project: Conception workshop,
+            prototyping, marketing strategy, landing page, Ux/UI?
+          </p>
+          <ul class="process-section-list">
+            <div class="first-two">
+              <li class="process-section-list-item">
+                <div class="process-section-list-item-style">
+                  <img
+                    class="process-section-list-item-image"
+                    src="./images/avatar-1.png"
+                    alt="avatar1"
+                    width="98"
+                    height="98"
+                  />
+                  <p class="process-section-list-item-text">
+                    I can take care of your pitch
+                  </p>
+                </div>
+              </li>
+              <li class="process-section-list-item">
+                <div class="process-section-list-item-style">
+                  <img
+                    class="process-section-list-item-image"
+                    src="./images/avatar-4.png"
+                    alt="avatar-4"
+                    width="98"
+                    height="98"
+                  />
+                  <p class="process-section-list-item-text">
+                    I can prototype your app
+                  </p>
+                </div>
+              </li>
+            </div>
+            <div class="second-two">
+              <li class="process-section-list-item">
+                <div class="process-section-list-item-style">
+                  <img
+                    class="process-section-list-item-image"
+                    src="./images/avatar-2.png"
+                    alt="avatar-2"
+                    width="98"
+                    height="98"
+                  />
+                  <p class="process-section-list-item-text">
+                    I can take care of your pitch
+                  </p>
+                </div>
+              </li>
+              <li class="process-section-list-item">
+                <div class="process-section-list-item-style">
+                  <img
+                    class="process-section-list-item-image"
+                    src="./images/avatar-3.png"
+                    alt="avatar-3"
+                    width="98"
+                    height="98"
+                  />
+                  <p class="process-section-list-item-text">
+                    I can help marketing strategy
+                  </p>
+                </div>
+              </li>
+            </div>
+          </ul>
+          <button class="process-section-button" type="button">
+            Contact our expert
+          </button>
+        </div>
       </section>
 
       <!--Кінець секції quick&easy process-->
