--- a/index.html
+++ b/index.html
@@ -270,24 +270,26 @@
             Do you require some help for your project: Conception workshop,
             prototyping, marketing strategy, landing page, Ux/UI?
           </p>
-          <ul class="process-section-list">
-            <div class="first-two">
+          <div class="experts">
+            <ul class="process-section-list">
               <li class="process-section-list-item">
-                <div class="process-section-list-item-style">
+                <div class="expert">
                   <img
-                    class="process-section-list-item-image"
+                    class="process-section-list-item-image-one"
                     src="./images/avatar-1.png"
                     alt="avatar1"
                     width="98"
                     height="98"
                   />
-                  <p class="process-section-list-item-text">
-                    I can take care of your pitch
-                  </p>
+                  <div class="bubble">
+                    <p class="process-section-list-item-text">
+                      I can take care of your pitch
+                    </p>
+                  </div>
                 </div>
               </li>
               <li class="process-section-list-item">
-                <div class="process-section-list-item-style">
+                <div class="expert reverse">
                   <img
                     class="process-section-list-item-image"
                     src="./images/avatar-4.png"
@@ -295,15 +297,15 @@
                     width="98"
                     height="98"
                   />
-                  <p class="process-section-list-item-text">
-                    I can prototype your app
-                  </p>
+                  <div class="bubble">
+                    <p class="process-section-list-item-text">
+                      I can prototype your app
+                    </p>
+                  </div>
                 </div>
               </li>
-            </div>
-            <div class="second-two">
               <li class="process-section-list-item">
-                <div class="process-section-list-item-style">
+                <div class="expert reverse">
                   <img
                     class="process-section-list-item-image"
                     src="./images/avatar-2.png"
@@ -311,13 +313,15 @@
                     width="98"
                     height="98"
                   />
-                  <p class="process-section-list-item-text">
-                    I can take care of your pitch
-                  </p>
+                  <div class="bubble">
+                    <p class="process-section-list-item-text">
+                      I can take care of your pitch
+                    </p>
+                  </div>
                 </div>
               </li>
               <li class="process-section-list-item">
-                <div class="process-section-list-item-style">
+                <div class="expert">
                   <img
                     class="process-section-list-item-image"
                     src="./images/avatar-3.png"
@@ -325,13 +329,15 @@
                     width="98"
                     height="98"
                   />
-                  <p class="process-section-list-item-text">
-                    I can help marketing strategy
-                  </p>
+                  <div class="bubble">
+                    <p class="process-section-list-item-text">
+                      I can help marketing strategy
+                    </p>
+                  </div>
                 </div>
               </li>
-            </div>
-          </ul>
+            </ul>
+          </div>
           <button class="process-section-button" type="button">
             Contact our expert
           </button>
@@ -343,43 +349,62 @@
       <!-- Початок секції content strategies-->
 
       <section>
-        <h2>Contents Strategies</h2>
-        <p>
-          We focus on ergonomics and meeting you where you work. It's only a
-          keystroke away.
-        </p>
-        <ul>
-          <li>
-            <img
-              src="./images/image.png"
-              alt="image"
-              width="350"
-              height="185"
-            />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Increasing Prosperity With Positive Thinking</h3>
-          </li>
-          <li>
-            <img
-              src="./images/image-1.png"
-              alt="image-1"
-              width="350"
-              height="185"
-            />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Motivation Is The First Step To Success</h3>
-          </li>
-          <li>
-            <img
-              src="./images/image-2.png"
-              alt="image-2"
-              width="350"
-              height="185"
-            />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Success Steps For Your Personal Or Business</h3>
-          </li>
-        </ul>
+        <div class="container strategies-section-container">
+          <h2 class="strategies-title">Contents Strategies</h2>
+          <p class="strategies-text">
+            We focus on ergonomics and meeting you where you work. It's only a
+            keystroke away.
+          </p>
+          <ul class="strategies-list">
+            <li class="strategies-list-item">
+              <img
+                class="strategies-list-image"
+                src="./images/image.png"
+                alt="image"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-list-date">
+                By <span class="wahid-ari">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-list-subtitle">
+                Success Steps For Your Personal Or Business
+              </h3>
+            </li>
+            <li class="strategies-list-item">
+              <img
+                class="strategies-list-image"
+                src="./images/image-1.png"
+                alt="image-1"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-list-date">
+                By <span class="wahid-ari">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-list-subtitle">
+                <span class="motivation-text"
+                  >Motivation Is The First Step To Success</span
+                >
+              </h3>
+            </li>
+            <li class="strategies-list-item">
+              <img
+                class="strategies-list-image"
+                src="./images/image-2.png"
+                alt="image-2"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-list-date">
+                By <span class="wahid-ari">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-list-subtitle">
+                Increasing Prosperity With Positive Thinking
+              </h3>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Кінець секції strategies-->
